# mcp-server

./: .gitignore  approval-create.json  approval-deploy.json  pyproject.toml  sitecustomize.py
.streamlit/: config.toml
scripts/: run_client.ps1  run_dashboard.ps1  run_server.ps1
src/engauto_mcp/: __init__.py  __main__.py  bootstrap.py  client.py  compat.py  config.py  cursor.py  dashboard.py  db.py  engine.py  errors.py  jsonrpc.py  logging_utils.py  models.py  persistence.py  rate_limiter.py  resources.py  sampling.py  server.py  subscriptions.py  tools.py
